--- a/PEA_2/PEA_2.vcxproj.filters
+++ b/PEA_2/PEA_2.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClCompile Include="StopCondition.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="BestNeighborFinder.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="ATSP.h">
@@ -63,6 +66,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="StopCondition.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="BestNeighborFinder.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
