--- a/PEA_2/PEA_2.vcxproj
+++ b/PEA_2/PEA_2.vcxproj
@@ -117,6 +117,7 @@
   <ItemGroup>
     <ClCompile Include="ATSP.cpp" />
     <ClCompile Include="ATSPSolver.cpp" />
+    <ClCompile Include="BestNeighborFinder.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="menu.cpp" />
     <ClCompile Include="performance.cpp" />
@@ -127,6 +128,7 @@
   <ItemGroup>
     <ClInclude Include="ATSP.h" />
     <ClInclude Include="ATSPSolver.h" />
+    <ClInclude Include="BestNeighborFinder.h" />
     <ClInclude Include="Menu.h" />
     <ClInclude Include="NeighborLocator.h" />
     <ClInclude Include="Performance.h" />
